fix gap on header

--- a/front/src/css/Header.scss
+++ b/front/src/css/Header.scss
@@ -33,6 +33,8 @@ $darkorange: #421300;
   }
   .searchButton {
     background-color: $mediumgreen;
+    width: 5vw;
+    border-radius: 3px;
   }
   .container {
     display: grid;
@@ -102,7 +104,7 @@ $darkorange: #421300;
     height: 5vh;
     border-bottom: 1px solid lightgray;
     align-items: center;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 0.5fr 0.7fr 0.7fr 0.7fr;
     grid-template-rows: 1fr;
     grid-auto-columns: 1fr;
     gap: 0px 0px;
